@@ -1,3 +1,9 @@
+2016-10-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* iresolve.c (is_trig_resolved, resolve_trig_call): Formatting fixes.
+	* simplify.c (simplify_trig_call, degrees_f, radians_f,
+	gfc_simplify_atrigd, gfc_simplify_cotan): Likewise.
+
 2016-10-11  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/77942
